--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
+:root{
+    --cor-fundo: rgb(25, 25, 25);
+    --cor-principal: rgb(10, 1, 34) ;
+    --cor-secundaria: rgb(4, 10, 66) ;
+    --cor-destaque: rgb(25, 226, 85) ;
+    --cor-texto: rgb(230, 243, 227);
+}
+
+
 body{
-    background-color: rgb(25, 25, 25);
-    color: rgb(220, 180, 135);
+    background-color: var(--cor-fundo);
+    color: var(--cor-texto);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.caixa-principal{
+    background-color: var(--cor-principal);
+    width: 90%;
+    max-width: 600px;
+    text-align: center;
+    padding: 20px;
+}
+
+h1{
+    color: var(--cor-destaque);
 }
