--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 @import url(https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap);
 
 body{
     background-color: var(--cor-fundo);
@@ -32,4 +33,18 @@ h1{
     font-family: 'Roboto Mono', sans-serif;
 }
 
+button{
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    font-family: 'Saira', sans-serif;
+    padding: 15px;
+    transition: background-color 0.3s;
+}
+
+button:hover{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
+}
   
